--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,6 +20,7 @@
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "megajs": "^1.3.8",
     "mongoose": "^8.16.1",
     "multer": "^2.0.0",
     "nodemailer": "^7.0.5",
