Updated user interface, enhanced degree management features, and fixed minor issues

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -4,9 +4,12 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install --only=production
+# CÀI CẢ devDependencies để có @babel/node
+RUN npm ci
 
 COPY . .
+
+ENV NODE_ENV=development
 
 EXPOSE 3000
 
